Bring branch up to date